src/components/ModalCard/ModalCard.module.scss
@use '../../styles/mixins.scss' as *;

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);

  &.show {
    display: block;
  }
}

.modal__content {
  margin: auto;
  margin-top: 5vh;
  border-radius: 10px;
  width: 80%;
  max-height: 80%;
  max-width: 700px;
  position: relative;
  overflow: auto;
  overflow-x: hidden;
  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
}

.loading {
  width: 100%;
  font-size: 30px;
  font-weight: bold;
  text-align: center;
  padding: 20px;
}
.close {
  background-color: $call;
  border: 4px solid $darkest;
  color: $darkest;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
  width: 30px;
  height: 30px;
  font-size: 24px;
  font-weight: bold;
}

.modal-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: $darkest;
  color: $light;
  padding: 10px;
}

.modal-body {
  padding: 20px;
  background-color: $dark;
}

.info {
  display: flex;
  flex-direction: column;
  gap: 10px;
  background-color: $darkest;
  color: $light;
  padding: 20px;
}

.modal__content img {
  width: 100%;
  max-height: 400px;
  object-fit: contain;
}

.modal__content h2 {
  font-size: 24px;
}

.photographer {
  font-size: 16px;
}

.description,
.taken {
  font-size: 14px;
  & * {
    color: $light;
  }
  & a {
    color: $call;
    text-decoration: underline;
  }
}

